syntax = "proto3";

package protobuf;

message PingRequest {
    string message = 1;
}

message PongReply {
    string message = 1;
}