syntax = "proto3";

package commands;

// []bs = {len_hmac(1 byte), hmac..., body_file...}
message CertsUploadRequest {
    bytes pem = 1;
    bytes key = 2;
}